<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single"> <!--make sure to only select one menu item from the item set in this group-->
        <item
            android:id="@+id/nav_myPwds"
            android:icon="@drawable/ic_iconmonstr_lock_26"
            android:title="@string/nav_myPasswords_en" />
        <item
            android:id="@+id/nav_pwdGen"
            android:icon="@drawable/ic_iconmonstr_key_13"
            android:title="@string/nav_passwordGenerator_en" />
    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_backupRestore"
            android:icon="@drawable/ic_iconmonstr_refresh_8"
            android:title="@string/nav_backupRestore_en" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_iconmonstr_gear_1"
            android:title="@string/nav_settings_en" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_iconmonstr_info_6"
            android:title="@string/nav_about_en" />
    </group>

</menu>